--- a/Memory game/index.html
+++ b/Memory game/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Memory game</title>
+
 	<link rel="stylesheet" type="text/css" href="../libraries/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<div class="main_board">
+
+</div>
 
 <script type="text/javascript" src="../libraries/p5.js"></script>
 <script type="text/javascript" src="sketch.js"></script>
