Last responsive update

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="consoleButtons">
             <p class="moves hidden">0 Move(s)</p>
             <p class="timeSpent hidden">0 mins 0 secs</p>
-            <i class="fas fa-redo hidden"></i>
-            <i class="fas fa-play"></i>
+            <i class="fas fa-redo fa-2x hidden"></i>
+            <i class="fas fa-play fa-2x"></i>
         </div>
         <div class="main_board">
         </div>
