--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="container">
         <div class="main_board">
             <div class="card"></div>
             <div class="card"></div>
