--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -6,11 +6,15 @@
     <title>Tic tac toe</title>
     <link rel="stylesheet" type="text/css" href="../libraries/style.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-
 </head>
 
 <body>
     <div class="container">
+        <h1 class="first_question">how do you want to play?</h1>
+        <div class="playMode">
+            <div class="option"><p> 2 Players</p></div>
+            <div class="option"><p>Bot</p></div>
+        </div>
         <div class="main_board">
             <div class="card"></div>
             <div class="card"></div>
