--- a/calculator/index.html
+++ b/calculator/index.html
@@ -12,7 +12,10 @@
 <body>
     <div class="calculatorBody">
         <div class="calculusHistory">
-            <input>
+            <div class="inputBody">
+                <input>
+                <div class="result"></div>
+            </div>
         </div>
         <div class="calculusButtons">
         </div>
