--- a/calculator/index.html
+++ b/calculator/index.html
@@ -20,6 +20,7 @@
         <div class="calculusButtons">
         </div>
     </div>
+    <script src="../libraries/math.js"></script>
     <script type="text/javascript" src="../libraries/p5.js"></script>
     <script type="text/javascript" src="sketch.js"></script>
 </body>
