another big update on functionality

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -18,11 +18,66 @@
             </div>
         </div>
         <div class="calculusButtons">
+            <div class="categories_row">
+                <div></div> <!-- just for flex -->
+                <div class="categories">
+                    <div class="category_option" id="option1">main</div>
+                    <div class="category_option" id="option2">abc</div>
+                    <div class="category_option" id="option3">func</div>
+                </div>
+                <div></div><!-- just for flex -->
+            </div>
+            <div class="main_option">
+                <div class="main_functions">
+                    <div >a&sup2;</div>
+                    <div >b&#8319;</div>
+                    <div >|a|</div>
+                    <div>&Sqrt;</div>
+                    <div>&#8731;</div>
+                    <div>&pi;</div>
+                    <div>sin</div>
+                    <div>cos</div>
+                    <div>tan</div>
+                    <div>(</div>
+                    <div>)</div>
+                    <div>.</div>
+                </div>
+                <div class="numbers">
+                    <div>7</div>
+                    <div>8</div>
+                    <div>9</div>
+                    <div>&#247;</div>
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                    <div>&times;</div>
+                    <div>1</div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>-</div>
+                    <div>0</div>
+                    <div>.</div>
+                    <div>ans</div>
+                    <div>+</div>
+
+                </div>
+                <div class="others">
+                    <div class="duo">
+                        <div>&#8592;</div>
+                        <div>&#8594;</div>
+                    </div>
+                    <div>BACKSPACE</div>
+                    <div>&#9166;</div>
+                    <div> it's low budget ok..</div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="../libraries/math.js"></script>
     <script type="text/javascript" src="../libraries/p5.js"></script>
+    <script type="text/javascript" src="vertical_center_buttons_text.js"></script>
     <script type="text/javascript" src="sketch.js"></script>
+    <script type="text/javascript" src="buttons_functionalities.js"></script>
 </body>
 
 </html>
