ok ive hardcoded the functionalities for all the buttons and let the man to insert somewhere random in the calculus.Duck life.

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -13,7 +13,7 @@
     <div class="calculatorBody">
         <div class="calculusHistory">
             <div class="inputBody">
-                <input>
+                <input type="text">
                 <div class="result"></div>
             </div>
         </div>
@@ -30,7 +30,7 @@
             <div class="main_option">
                 <div class="main_functions">
                     <div >a&sup2;</div>
-                    <div >b&#8319;</div>
+                    <div >a&#8319;</div>
                     <div >|a|</div>
                     <div>&Sqrt;</div>
                     <div>&#8731;</div>
