--- a/calculator/index.html
+++ b/calculator/index.html
@@ -71,6 +71,10 @@
                     <div> it's low budget ok..</div>
                 </div>
             </div>
+            <div class="abc">
+
+            </div>
+            <div class="functions">COMMING SOON!</div>
         </div>
     </div>
     <script src="../libraries/math.js"></script>
