--- a/maze/index.html
+++ b/maze/index.html
@@ -5,6 +5,13 @@
 
   </head>
   <body>
+  	<div class="settings">
+  		<p>Square size (Smaller value means harder maze) </p>
+  		<input placeholder="40" type="text" name="sq_size" id="sq_size">
+  		<button id="go_button"> GO </button>
+  	</div>
+  	<div class="maze">
+  	</div>
   	 <script src="cell.js"></script>
     <script src="sketch.js"></script>
   
