added score board

--- a/maze/index.html
+++ b/maze/index.html
@@ -5,6 +5,8 @@
 
   </head>
   <body>
+  	<div id="score">12</div>
+
   	<div class="settings">
   		<p>Square size (Smaller value means harder maze) </p>
   		<input placeholder="80" type="text" name="sq_size" id="sq_size">
