--- a/ChangeBases/index.html
+++ b/ChangeBases/index.html
@@ -6,6 +6,7 @@
     <title>Schimbare baze</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
+    <link rel="icon" href="fox.png" type="image/gif" sizes="24x24"> 
 </head>
 <body>
     <div class="card" id="mainOne">
