--- a/ChangeBases/index.html
+++ b/ChangeBases/index.html
@@ -13,7 +13,7 @@
         <div class="card-body innerMainone" >
             <div class="form-group mt-2">
                 <label for="nrTransform">numarul de transformat</label>
-                <input type="text" class="form-control" id="nrTransform_input" placeholder="">
+                <input type="text" class="form-control" id="nrTransform_input" placeholder="" >
               </div>
             <div class="form-group mt-2">
                 <label for="fromBase">de la baza:</label>
@@ -32,6 +32,9 @@
         </div>
       </div>
 
-    <script src="script.js"></script>
+      <script src="jquery-3.6.0.min.js"></script>
+      <script src="script.js"></script>
+
+
 </body>
 </html>
