--- a/ChangeBases/index.html
+++ b/ChangeBases/index.html
@@ -24,7 +24,7 @@
                 <input type="number" class="form-control" id="toBase_input" placeholder="">
               </div>
      
-              <button type="button" class="btn btn-success mt-3" id="Calculeaza">Calculeaza</button>
+              <button type="button" class="btn btn-success mt-3" style="border:0;background-color: #146c43;" id="Calculeaza">Calculeaza</button>
 
               <span id="result" class="mt-3 text-primary" 
               style="visibility:hidden"
