final form for now

--- a/ChangeBases/index.html
+++ b/ChangeBases/index.html
@@ -17,7 +17,7 @@
               </div>
             <div class="form-group mt-2">
                 <label for="fromBase">de la baza:</label>
-                <input type="number" class="form-control" id="fromBase_input" placeholder="">
+                <input type="number" class="form-control" id="fromBase_input" placeholder="" value="10" disabled>
               </div>
               <div class="form-group mt-2">
                 <label for="toBase">in baza:</label>
