--- a/ChangeBases/index.html
+++ b/ChangeBases/index.html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schimbare baze</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet" >
+    <link href="css/style.css" rel="stylesheet">
     <link rel="icon" href="fox.png" type="image/gif" sizes="24x24"> 
 </head>
 <body>
@@ -32,8 +32,11 @@
         </div>
       </div>
 
-      <script src="jquery-3.6.0.min.js"></script>
-      <script src="script.js"></script>
+      <script src="js/jquery-3.6.0.min.js"></script>
+      <script src="js/ValidCheck.js"></script>
+      <script src="js/ChangeBaseFunctions.js"></script>
+      <script src="js/script.js"></script>
+
 
 
 </body>
