--- a/calculator/index.html
+++ b/calculator/index.html
@@ -78,7 +78,7 @@
         </div>
     </div>
     <script src="../libraries/math.js"></script>
-    <script type="text/javascript" src="../libraries/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
     <script type="text/javascript" src="vertical_center_buttons_text.js"></script>
     <script type="text/javascript" src="sketch.js"></script>
     <script type="text/javascript" src="buttons_functionalities.js"></script>
