--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="main_board">
         </div>
     </div>
-    <script type="text/javascript" src="libraries/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
     <script type="text/javascript" src="Memory%20game/sketch.js"></script>
 </body>
 
