--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -27,7 +27,7 @@
             <div class="card"></div>
         </div>
     </div>
-    <script type="text/javascript" src="../libraries/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
     <script type="text/javascript" src="sketch.js"></script>
 </body>
 
